--- a/ShopMartWebsite/ShopMartWebsite/Views/Category/_Action.cshtml
+++ b/ShopMartWebsite/ShopMartWebsite/Views/Category/_Action.cshtml
@@ -58,7 +58,7 @@
                     swal({
                         title: "Chúc mừng!!!",
                         text: "Cập nhập Danh mục thành công!",
-                        icon: "warning",
+                        icon: "success",
                         buttons: "OK"
 
                     })
@@ -70,7 +70,7 @@
                     swal({
                         title: "Chúc mừng!!!",
                         text: "Thêm Danh mục thành công!",
-                        icon: "warning",
+                        icon: "success",
                         buttons: "OK"
 
                     })
