--- a/ShopMartWebsite/ShopMartWebsite/Views/Home/Index.cshtml
+++ b/ShopMartWebsite/ShopMartWebsite/Views/Home/Index.cshtml
@@ -3,6 +3,10 @@
 }
 
 @model ShopMartWebsite.Models.ProductListViewModel
+<style>
+    
+</style>
+
 <!--------Navbar------->
 <div class="container-menu">
     <nav class="menu-navbar">
@@ -110,50 +114,50 @@
         </div>
         @if (Model.Products != null)
         {
-        <div class="products-center">
-            <!-- single product -->
+            <div id="san-pham" class="products-center">
+                <!-- single product -->
 
-            @foreach (var item in Model.Products)
-            {
-                @if (item.amount > 0)
+                @foreach (var item in Model.Products)
                 {
-                    <article class="product">
-                        <div class="img-container">
-                            <img src="~/images/site/@item.image" style="max-height: 275px" alt="product" class="product-img">
-                            @if (!User.IsInRole("Admin"))
-                            {
-                                <button class="bag-btn" data-id="@item.id" data-name="@item.name" data-image="@item.image"
-                                        data-description="@item.description" data-category="@item.category.name" data-price="@item.price"
-                                        data-color="@item.color" data-size="@item.size" data-amount="@item.amount">
-                                    <i class="fas fa-shopping-cart"></i>
-                                    thêm giỏ hàng
-                                </button>
-                            }
-                        </div>
-                        <a asp-controller="Home" asp-action="Detail" asp-route-productID="@item.id"><h3>@item.name</h3></a>
-                        <h6>@item.price VNĐ</h6>
-                    </article>
+                    @if (item.amount > 0)
+                    {
+                        <article class="product">
+                            <div class="img-container">
+                                <img src="~/images/site/@item.image" style="max-height: 275px" alt="product" class="product-img">
+                                @if (!User.IsInRole("Admin"))
+                                {
+                                    <button class="bag-btn" data-id="@item.id" data-name="@item.name" data-image="@item.image"
+                                            data-description="@item.description" data-category="@item.category.name" data-price="@item.price"
+                                            data-color="@item.color" data-size="@item.size" data-amount="@item.amount">
+                                        <i class="fas fa-shopping-cart"></i>
+                                        thêm giỏ hàng
+                                    </button>
+                                }
+                            </div>
+                            <a asp-controller="Home" asp-action="Detail" asp-route-productID="@item.id"><h3>@item.name</h3></a>
+                            <h6>@item.price VNĐ</h6>
+                        </article>
+                    }
+
                 }
 
-            }
-
-            <!--x single product x-->
-        </div>
+                <!--x single product x-->
+            </div>
             <!-- pager - sử dụng bootstrap - pagination -->
             if (Model.Pager.EndPage > 1)
             {
-                
+
                 <nav>
-                    <ul class="pagination" style="width: 150px; margin: 30px auto;">
+                    <ul class="pagination" style="outline: none;width: 150px; margin: 30px auto;">
                         @if (Model.Pager.CurrentPage > 1)
                         {
                             <li class="page-item">
-                                <a class="page-link" href="@Url.Action("Index","Home", new { searchTerm = Model.SearchTerm, categoryId = Model.categoryId })">
+                                <a style="color:black;outline: none;background-color: #f8f8f8;border-radius: 5px;" class="page-link" href="@Url.Action("Index","Home", new { searchTerm = Model.SearchTerm, categoryId = Model.categoryId })">
                                     <i class="fas fa-angle-double-left"></i>
                                 </a>
                             </li>
                             <li class="page-item">
-                                <a class="page-link" href="@Url.Action("Index","Home", new { page = Model.Pager.CurrentPage - 1,
+                                <a style="color:black;outline: none;background-color: #f8f8f8;border-radius: 5px;" class="page-link" href="@Url.Action("Index","Home", new { page = Model.Pager.CurrentPage - 1,
                                                   searchTerm = Model.SearchTerm, categoryId = Model.categoryId })">
                                     <i class="fas fa-angle-left"></i>
                                 </a>
@@ -163,20 +167,20 @@
                         @for (var page = Model.Pager.StartPage; page <= Model.Pager.EndPage; page++)
                         {
                             <li class="page-item @(page == Model.Pager.CurrentPage ? "active" : "")">
-                                <a class="page-link" href="@Url.Action("Index","Home", new { page = page,
-                                                  searchTerm = Model.SearchTerm, categoryId = Model.categoryId })">@(page)</a>
+                                <a style=" @(page == Model.Pager.CurrentPage ? "color:white;outline: none;background-color: green; border-radius: 5px" : "color:black;outline: none;background-color: #f8f8f8;border-radius: 5px")" class="page-link" href="@Url.Action("Index","Home", new { page = page,
+                                                  searchTerm = Model.SearchTerm, categoryId = Model.categoryId }) #san-pham">@(page)</a>
                                             </li>}
 
                         @if (Model.Pager.CurrentPage < Model.Pager.TotalPages)
                         {
                             <li class="page-item">
-                                <a class="page-link" href="@Url.Action("Index","Home", new { page = Model.Pager.CurrentPage + 1,
+                                <a style="color:black;outline: none;background-color: #f8f8f8;border-radius: 5px;" class="page-link" href="@Url.Action("Index","Home", new { page = Model.Pager.CurrentPage + 1,
                                                   searchTerm = Model.SearchTerm, categoryId = Model.categoryId })">
                                     <i class="fas fa-angle-right"></i>
                                 </a>
                             </li>
                             <li class="page-item">
-                                <a class="page-link" href="@Url.Action("Index","Home", new { page = Model.Pager.TotalPages,
+                                <a style="color:black;outline: none;background-color: #f8f8f8;border-radius: 5px;" class="page-link" href="@Url.Action("Index","Home", new { page = Model.Pager.TotalPages,
                                                   searchTerm = Model.SearchTerm, categoryId = Model.categoryId })">
                                     <i class="fas fa-angle-double-right"></i>
                                 </a>
@@ -184,7 +188,7 @@
                         }
                     </ul>
                 </nav>
-                  
+
             }
         }
         else
@@ -194,9 +198,36 @@
             </div>
         }
     </section>
+    
     <!-----x-----Products-----x----->
+    <!--Map-->
+    <div style="width: 100%;  color: gray;">
+        <div style="width: 80%; margin: 0 auto;  border: 1px solid #f8f8f8;  padding: 30px 0 30px 0; display: flex; justify-content: space-between;">
+            <div style=" flex-basis: 38%;">
+                <h5 class="orange-color">HỆ THỐNG CỬA HÀNG</h5>
+                <p><i class="fa fa-map-marker-alt orange-color"></i> 232/17/6, Quốc lộ 13, Phường 26, Quận Bình Thạnh, TP.HCM</p>
+                <p><i class="fa fa-phone-alt orange-color"></i> +(84) 336 970 895</p>
+                <p><i class="fa fa-envelope orange-color"></i> thiennguyen.it.ute@gmail.com</p>
+            </div>
+            <div style=" flex-basis: 28%; ">
+                <h5 class="orange-color">FAN PAGE</h5>
+                <div  class="fb-page" data-href="https://www.facebook.com/Online-Shop-100549548138729/" data-width="400px" data-hide-cover="false"
+                     data-show-facepile="true"></div>
+            </div>
+            <div style="flex-basis: 28%;">
+                <h5 class="orange-color">BẢN ĐỒ</h5>
+                <iframe width='100%' height="400" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.9322903619263!2d106.71160921474927!3d10.816493692294342!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3175289a3bac3373%3A0x9376707fd4ad09ab!2zMjMyLzE3LzYgUUwxMywgUGjGsOG7nW5nIDI2LCBCw6xuaCBUaOG6oW5oLCBI4buTIENow60gTWluaCwgVmnhu4d0IE5hbQ!5e0!3m2!1svi!2s!4v1577580051510!5m2!1svi!2s" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+            </div>
+            
+
+        </div>
+    </div>
+
 </main>
+
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v5.0"></script>
 <script>
+    
     var lstItem = [];
     const cartItems = document.querySelector('.cart-items');
     if (window.localStorage)
@@ -214,7 +245,17 @@
             }
             else if (lstItem[i].id == productId && lstItem[i].quantity >= lstItem[i].amount){
                 exist = 3;
-                alert("sản phẩm chỉ còn lại " + lstItem[i].amount + " sản phẩm");
+                //alert("sản phẩm chỉ còn lại " + lstItem[i].amount + " sản phẩm");
+                swal({
+                    title: "Thông báo!",
+                    text: "sản phẩm chỉ còn lại " + lstItem[i].amount + " sản phẩm",
+                    icon: "warning",
+                    buttons: "OK"
+
+                })
+                    .then((willDelete) => {
+                        //location.reload();
+                    });
             }
         }
         console.log("giohangton sau", lstItem);
@@ -241,7 +282,17 @@
             });
             cartItems.innerText = itemsTotal;
             window.localStorage.setItem("carts", JSON.stringify(lstItem));
-            alert("đã thêm vào giỏ hàng!!!");
+            //alert("đã thêm vào giỏ hàng!!!");
+            swal({
+                title: "Thông báo!",
+                text: "đã thêm vào giỏ hàng!!!",
+                icon: "success",
+                buttons: "OK"
+
+            })
+                .then((willDelete) => {
+                    //location.reload();
+                });
         }
         else if (exist == 2) {
             let itemsTotal = 0;
@@ -253,7 +304,17 @@
             //console.log(itemsTotal);
             cartItems.innerText = itemsTotal;
             window.localStorage.setItem("carts", JSON.stringify(lstItem));
-            alert("đã thêm vào giỏ hàng!!!");
+            //alert("đã thêm vào giỏ hàng!!!");
+            swal({
+                title: "Thông báo!",
+                text: "đã thêm vào giỏ hàng!!!",
+                icon: "success",
+                buttons: "OK"
+
+            })
+                .then((willDelete) => {
+                    //location.reload();
+                });
         }
         else {
 
