--- a/ShopMartWebsite/ShopMartWebsite/Views/Shared/_LayoutAdmin.cshtml
+++ b/ShopMartWebsite/ShopMartWebsite/Views/Shared/_LayoutAdmin.cshtml
@@ -91,7 +91,7 @@
                                 <li>
                                     <a><i class="fa fa-desktop"></i> Người dùng <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu">
-                                        <li><a href="tables_dynamic.html">Quản lý Người dùng</a></li>
+                                        <li><a href="@Url.Action("Index","User")">Quản lý Người dùng</a></li>
                                         
                                     </ul>
                                 </li>
