--- a/ShopMartWebsite/ShopMartWebsite/Views/Account/Login.cshtml
+++ b/ShopMartWebsite/ShopMartWebsite/Views/Account/Login.cshtml
@@ -13,7 +13,7 @@
 
 
     <link href="~/user/css/login.css" rel="stylesheet" />
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
     <!--fontawesome-->
     <link rel="stylesheet" href="~/user/css/all.css" type="text/css" />
     <!--Bootstrap CDN-->
@@ -32,40 +32,95 @@
 </head>
 <body>
     <div class="page-login">
-        <h3>@ViewData["notify"]</h3>
+        <input type="hidden" id="status" value="@Context.Request.Host@Context.Request.Path"></input>
+        <div style="width: 50%;margin: 0 auto; margin-top: 20px;">
+            @if (@ViewData["LockedOutPassword"] != null)
+            {
+                <div class="alert alert-warning" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"></button>
+                    <strong>Thông báo !!!</strong> @ViewData["LockedOutPassword"] !
+                </div>
+            }
+            @if (@ViewData["WrongPassword"] != null)
+            {
+                <div class="alert alert-warning" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"></button>
+                    <strong>Thông báo !!!</strong> @ViewData["WrongPassword"] !
+                </div>
+            }
+            @if (@ViewData["notify"] != null)
+            {
+                <div class="alert alert-warning" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"></button>
+                    <strong>Thông báo !!!</strong> @ViewData["notify"] !
+                </div>
+            }
+            @if (@ViewData["RegisterSuccess"] != null)
+            {
+                <div class="alert alert-success" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"></button>
+                    <strong>Thông báo !!!</strong> @ViewData["RegisterSuccess"] !
+                </div>
+            }
+            @if (@ViewData["NotConfirmEmail"] != null)
+            {
+                <div class="alert alert-warning" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"></button>
+                    <strong>Thông báo !!!</strong> @ViewData["NotConfirmEmail"] !
+                </div>
+            }
+            @if (@ViewData["NotAccount"] != null)
+            {
+                <div class="alert alert-warning" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"></button>
+                    <strong>Thông báo !!!</strong> @ViewData["NotAccount"] !
+                </div>
+            }
+
+        </div>
         <div class="container" id="container">
             <div class="form-container sign-up-container">
-                <form method="post" asp-action="Register" asp-controller="Account">
+                <form method="post" asp-action="Register">
                     <h1>Tạo tài khoản</h1>
-                    <div class="social-container">
-                        <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-                        <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
-                    </div>
 
-                    <input type="text" name="DisplayName" placeholder="Họ và tên" /><br />
-                    <input type="email" name="Email" placeholder="Email" /><br>
 
-                    <input type="password" name="Password" placeholder="Mật khẩu" /><br>
-                    <input type="password" name="ConfirmPassword" placeholder="Nhập lại mật khẩu" /><br>
+                    <input asp-for="DisplayName" placeholder="Họ và tên" />
+                    <span asp-validation-for="DisplayName" class="text-danger"></span><br />
+
+                    <input asp-for="Email" placeholder="Email" />
+                    <span asp-validation-for="Email" class="text-danger"></span><br>
+
+                    <input asp-for="Password" placeholder="Mật khẩu" />
+                    <span asp-validation-for="Password" class="text-danger"></span><br>
+
+                    <input asp-for="ConfirmPassword" placeholder="Nhập lại mật khẩu" />
+                    <span asp-validation-for="ConfirmPassword" class="text-danger"></span><br>
+
                     <button type="submit">Đăng ký</button>
                 </form>
             </div>
             <div class="form-container sign-in-container">
-                <form method="post" asp-action="Login" asp-controller="Account">
+                <form method="post" asp-action="Login" id="formLogin">
                     <h1>Đăng nhập</h1>
                     <input type="hidden" name="productId" value="@Model.productId" />
                     <div class="social-container">
                         <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
                         <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-                        <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
+
                     </div>
 
-                    <input type="email" name="UserName" placeholder="Email" /><br>
-                    <input type="password" name="PasswordLogin" placeholder="Mật khẩu" />
-                    <a href="#">Quên mật khẩu?</a>
+                    <input asp-for="UserName" name="UserName" placeholder="Email" />
+                    <span asp-validation-for="UserName" class="text-danger"></span><br>
+                    <input asp-for="PasswordLogin" name="PasswordLogin" placeholder="Mật khẩu" />
+                    <span asp-validation-for="PasswordLogin" class="text-danger"></span>
+                    @*<a asp-action="ForgotPassword">Quên mật khẩu?</a>*@
+                    <button type="button" data-href="@Url.Action("ForgotPassword", "Account")" data-toggle="modal" data-target="#actionModal" id="forgotpassword-btn"
+                            style="background-color: white; color: gray; outline: none; border: none">
+                        Quên mật khẩu?
+                    </button>
                     <button type="submit">Đăng nhập</button>
                 </form>
+
             </div>
             <div class="overlay-container">
                 <div class="overlay">
@@ -81,6 +136,17 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <!--Modal-->
+    <div class="modal fade bd-example-modal-lg" id="actionModal" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-lg" role="document">
+        </div>
+    </div>
+    <!---->
+    <div class="modal fade bd-example-modal-xl" id="actionView" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-xl">
+
         </div>
     </div>
     <!-- Jquery Library file-->
@@ -100,7 +166,12 @@
         const signUpButton = document.getElementById('signUp');
         const signInButton = document.getElementById('signIn');
         const container = document.getElementById('container');
-
+        var status = $('#status').val();
+        if (status == "localhost:44340/Account/Register") {
+            jQuery(function () {
+                jQuery('#signUp').click();
+            });
+        }
         signUpButton.addEventListener('click', () => {
             container.classList.add("right-panel-active");
         });
@@ -108,8 +179,33 @@
         signInButton.addEventListener('click', () => {
             container.classList.remove("right-panel-active");
         });
+        //forgot password
+        $('#forgotpassword-btn').click(function () {
+            console.log('có vô', $(this).attr("data-href"));
+            $.ajax({
+                url: $(this).attr("data-href")
+            }).done(function (response) {
+                console.log(response);
+                $('#actionModal .modal-dialog').html(response);
+            });
+        });
+        //
 
+        window.setTimeout(function () {
+            $(".alert").fadeTo(500, 0).slideUp(500, function () {
+                $(this).remove();
+            });
+        }, 5000);
     </script>
 
 </body>
 </html>
+
+
+
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
+
+
