--- a/ShopMartWebsite/ShopMartWebsite/Views/Account/Notify.cshtml
+++ b/ShopMartWebsite/ShopMartWebsite/Views/Account/Notify.cshtml
@@ -7,10 +7,21 @@
 
 <html>
 <head>
+    <link rel="stylesheet" href="~/user/css/bootstrap.css">
     <meta name="viewport" content="width=device-width" />
     <title>Notify</title>
 </head>
 <body>
-    <h3>@ViewData["notify"]</h3>
+
+    <div class="col-md-12">
+        @if (@ViewData["notify"] != null)
+        {
+            <div class="alert alert-success" role="alert">
+                @ViewData["notify"] !
+            </div>
+        }
+
+
+    </div>
 </body>
 </html>
