--- a/ShopMartWebsite/ShopMartWebsite/Views/Category/_Listing.cshtml
+++ b/ShopMartWebsite/ShopMartWebsite/Views/Category/_Listing.cshtml
@@ -33,8 +33,8 @@
                     
                     <td class=" last">
                         
-                        <button data-href="@Url.Action("Action", "Category", new { ID = item.id, page= Model.Pager.CurrentPage })" class="data-btn btn btn-primary" data-toggle="modal" data-target="#actionModal"><i class="fas fa-edit"></i></button>
-                        <button data-href="@Url.Action("Delete", "Category", new { ID = item.id, page= Model.Pager.CurrentPage })" class="data-btn btn btn-danger" data-toggle="modal" data-target="#actionModal"><i class="fas fa-trash-alt"></i></button>
+                        <button data-href="@Url.Action("Action", "Category", new { ID = item.id, page= Model.Pager.CurrentPage })" class="data-btn btn btn-primary" data-toggle="modal" data-target="#actionModal" title="Cập nhập Danh mục"><i class="fas fa-edit"></i></button>
+                        <button data-href="@Url.Action("Delete", "Category", new { ID = item.id, page= Model.Pager.CurrentPage })" class="data-btn btn btn-danger" data-toggle="modal" data-target="#actionModal" title="Xóa Danh Mục"><i class="fas fa-trash-alt"></i></button>
                     </td>
                 </tr>
                     }
