--- a/ShopMartWebsite/ShopMartWebsite/Views/Product/_Listing.cshtml
+++ b/ShopMartWebsite/ShopMartWebsite/Views/Product/_Listing.cshtml
@@ -58,9 +58,9 @@
                     <td class="a-right a-right ">@item.category.name</td>
                 }
                 <td class=" last">
-                    <button data-href="@Url.Action("Viewss", "Product", new { ID = item.id })" class="data-btn-view btn btn-info" data-toggle="modal" data-target="#actionView"><i class="fas fa-eye"></i></button>
-                    <button data-href="@Url.Action("Action", "Product", new { ID = item.id })" class="data-btn btn btn-primary" data-toggle="modal" data-target="#actionModal"><i class="fas fa-edit"></i></button>
-                    <button data-href="@Url.Action("Delete", "Product", new { ID = item.id })" class="data-btn btn btn-danger" data-toggle="modal" data-target="#actionModal"><i class="fas fa-trash-alt"></i></button>
+                    <button data-href="@Url.Action("Viewss", "Product", new { ID = item.id })" class="data-btn-view btn btn-info" data-toggle="modal" data-target="#actionView" title="Xem Chi tiết Sản phẩm"><i class="fas fa-eye"></i></button>
+                    <button data-href="@Url.Action("Action", "Product", new { ID = item.id })" class="data-btn btn btn-primary" data-toggle="modal" data-target="#actionModal" title="Cập nhập Sản phẩm"><i class="fas fa-edit"></i></button>
+                    <button data-href="@Url.Action("Delete", "Product", new { ID = item.id })" class="data-btn btn btn-danger" data-toggle="modal" data-target="#actionModal" title="Xóa Sản phẩm"><i class="fas fa-trash-alt"></i></button>
                 </td>
             </tr>
                  }
